@@ -402,15 +402,15 @@ $shouldCollapse = $extensionsQuickInfo->update == 0 && $extensionsQuickInfo->sit
 
                             @if ($error)
                                 <span class="text-danger fw-medium extensions-filterable-name">
-                                    {{{ $item->name }}}
+                                    {{{ strip_tags($item->name) }}}
                                 </span>
                             @elseif ($hasUpdate)
                                 <span class="text-warning-emphasis fw-bold extensions-filterable-name">
-                                    {{{ $item->name }}}
+                                    {{{ strip_tags($item->name) }}}
                                 </span>
                             @else
                                 <span class="extensions-filterable-name">
-                                    {{{ $item->name }}}
+                                    {{{ strip_tags($item->name) }}}
                                 </span>
                             @endif
 
@@ -488,15 +488,15 @@ $shouldCollapse = $extensionsQuickInfo->update == 0 && $extensionsQuickInfo->sit
                         <div class="extensions-filterable-author">
                             @if ($item->authorUrl)
                                 <a href="{{ (str_starts_with($item->authorUrl, 'http://') || str_starts_with($item->authorUrl, 'https://') || str_starts_with($item->authorUrl, '//')) ? '' : '//' }}{{{ $item->authorUrl }}}" target="_blank">
-                                    {{{ $item->author }}}
+                                    {{{ strip_tags($item->author) }}}
                                 </a>
                             @else
-                                {{{ $item->author }}}
+                                {{{ strip_tags($item->author) }}}
                             @endif
                         </div>
                         @if ($item->authorEmail)
                             <div class="text-muted">
-                                {{{ $item->authorEmail }}}
+                                {{{ strip_tags($item->authorEmail) }}}
                             </div>
                         @endif
                     </td>
